--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,140 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web</title>
+
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🔥</text></svg>"
+    />
+
+    <!-- Primary Meta Tags -->
+    <title>Galsen Streak - GitHub Streak Badge Generator</title>
+    <meta
+      name="title"
+      content="Galsen Streak - GitHub Streak Badge Generator"
+    />
+    <meta
+      name="description"
+      content="Generate beautiful GitHub streak badges with Senegalese flair. Track your coding consistency with custom themes and graphs."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://galsen-streak.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Galsen Streak - GitHub Streak Badge Generator"
+    />
+    <meta
+      property="og:description"
+      content="Generate beautiful GitHub streak badges with Senegalese flair. Track your coding consistency with custom themes and graphs."
+    />
+    <meta
+      property="og:image"
+      content="https://galsen-streak.vercel.app/streak/torvalds?theme=senegal"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://galsen-streak.vercel.app/" />
+    <meta
+      property="twitter:title"
+      content="Galsen Streak - GitHub Streak Badge Generator"
+    />
+    <meta
+      property="twitter:description"
+      content="Generate beautiful GitHub streak badges with Senegalese flair. Track your coding consistency with custom themes and graphs."
+    />
+    <meta
+      property="twitter:image"
+      content="https://galsen-streak.vercel.app/streak/torvalds?theme=senegal"
+    />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Preload fonts for better performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Galsen Streak",
+        "description": "GitHub Streak Badge Generator with custom themes",
+        "url": "https://galsen-streak.vercel.app",
+        "applicationCategory": "DeveloperApplication",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        }
+      }
+    </script>
+
+    <style>
+      /* Prevent flash of unstyled content */
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #000;
+        color: #fff;
+        font-family:
+          -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+          "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+          sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+
+      /* Loading spinner */
+      #loading {
+        position: fixed;
+        inset: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #000;
+        z-index: 9999;
+      }
+
+      #loading-spinner {
+        width: 48px;
+        height: 48px;
+        border: 4px solid #27272a;
+        border-top-color: #22c55e;
+        border-radius: 50%;
+        animation: spin 0.8s linear infinite;
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      /* Hide loading when app is ready */
+      #root:not(:empty) ~ #loading {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Loading indicator -->
+    <div id="loading">
+      <div id="loading-spinner"></div>
+    </div>
+
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Analytics (optional - uncomment if needed) -->
+    <!-- <script defer data-domain="galsen-streak.vercel.app" src="https://plausible.io/js/script.js"></script> -->
   </body>
 </html>
